fixed please wait msg getting distorted issue

--- a/webroot/css/styles.less
+++ b/webroot/css/styles.less
@@ -3238,7 +3238,7 @@ img {
 						}
 						
 						
-						.top-10-download-now-button {
+						.top-100-download-now-button {
 							background: rgb(255,255,255);
 							display: block;
 							position: absolute;
@@ -3257,8 +3257,6 @@ img {
 							text-decoration: none;	
 							font-weight: bold;
 							.box-shadow(0 0 2px rgba(0,0,0,.5));
-							
-							
 						}
 					}
 					
